[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket-dc-mcp"
version = "0.1.0a2"
description = "A hardened MCP server that exposes Bitbucket Data Center operations to AI coding assistants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "bitbucket-dc-mcp contributors"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "bitbucket",
    "bitbucket-data-center",
    "ai",
    "claude",
    "enterprise",
    "on-premise",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[project.scripts]
bitbucket-dc-mcp = "bitbucket_dc_mcp.server:run"

[project.urls]
Homepage = "https://github.com/inkman97/bitbucket-dc-mcp"
Repository = "https://github.com/inkman97/bitbucket-dc-mcp"
Issues = "https://github.com/inkman97/bitbucket-dc-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
